--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   .header-banner{
     padding-top:35px;
     padding-bottom:100px;
+    height: 550px;
     color:#ffffff;
     font-family:Helvetica, serif;
     font-weight:100;
@@ -24,7 +25,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 66%;
+    height: 550px;
     background: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
     z-index: 1;
   }
