--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
     font-family:Helvetica, serif;
     font-weight:100;
     background-image:url("./assets/back.png");
-    height: 550px;
     background-size: cover; /* Ensures the image covers the entire header */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
@@ -25,11 +24,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 550px;
+    height: 100%;
     background: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
     z-index: 1;
   }
-  
+
   .header-banner h1,
   .header-banner .menu-item,
   .header-banner .lead-title,
