--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   .header-banner{
     padding-top:35px;
     padding-bottom:100px;
+    height: 550px;
     color:#ffffff;
     font-family:Helvetica, serif;
     font-weight:100;
@@ -24,11 +25,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 66%;
     background: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
     z-index: 1;
   }
-
   .header-banner h1,
   .header-banner .menu-item,
   .header-banner .lead-title,
@@ -38,7 +38,6 @@
     z-index: 2; /* Ensure text is above the overlay */
     color: white; /* Ensure text color is white */
   }
-
   .container-width{
     width:90%;
     max-width:1150px;
