--- a/css/style.css
+++ b/css/style.css
@@ -7,28 +7,30 @@
   .clearfix{
     clear:both;
   }
-  .header-banner{
-    padding-top:35px;
-    padding-bottom:100px;
+  .header-banner {
+    padding-top: 35px;
+    padding-bottom: 100px;
     height: 550px;
-    color:#ffffff;
-    font-family:Helvetica, serif;
-    font-weight:100;
-    background-image:url("./assets/back.png");
+    color: #ffffff;
+    font-family: Helvetica, serif;
+    font-weight: 100;
+    background-image: url('/GordianKnotClub/assets/back.png'); /* Adjust path based on repository name */
     background-size: cover; /* Ensures the image covers the entire header */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
   }
+  
   .header-banner::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 66%;
+    height: 550px;
     background: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
     z-index: 1;
   }
+  
   .header-banner h1,
   .header-banner .menu-item,
   .header-banner .lead-title,
